<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailUserActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="34dp"
        android:layout_height="wrap_content">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:id="@+id/iv_avatar"
            android:src="@drawable/user_ten"
            android:layout_height="150dp"/>

        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/size_medium"
            android:text="@string/sample_name"
            android:textSize="@dimen/size_title"
            android:layout_marginBottom="3dp" />
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:text="@string/sample_username"
            android:textSize="@dimen/size_desc"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_work"
                android:layout_width="wrap_content"/>
            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:text="@string/company"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/size_desc"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_place"
                android:layout_width="wrap_content"/>
            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:text="@string/location"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/size_desc"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/white"
            android:layout_marginTop="4dp"
            android:elevation="4dp"
            card_view:cardCornerRadius="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:paddingVertical="@dimen/size_medium"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/repository"
                        android:textSize="@dimen/size_desc" />

                    <TextView
                        android:id="@+id/tv_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="1"
                        android:textSize="@dimen/size_desc"
                        android:layout_marginBottom="3dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/followers"
                        android:textSize="@dimen/size_desc" />

                    <TextView
                        android:id="@+id/tv_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="1"
                        android:textSize="@dimen/size_desc"
                        android:layout_marginBottom="3dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/following"
                        android:textSize="@dimen/size_desc" />

                    <TextView
                        android:id="@+id/tv_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="1"
                        android:textSize="@dimen/size_desc"
                        android:layout_marginBottom="3dp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>